samples/_failures_safe/1761252500_1246bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c51ff6c4.c: In function ‘main’:
./samples/SAFE/__tmp_c51ff6c4.c:146:12: error: missing terminating " character
  146 |     printf("Compression ratio: %.
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c51ff6c4.c:146:5: error: expected expression at end of input
  146 |     printf("Compression ratio: %.
      |     ^~~~~~
./samples/SAFE/__tmp_c51ff6c4.c:146:5: error: expected declaration or statement at end of input
